# anomaly-mouse-dynamics

./: .editorconfig  .gitignore  README.md  pyproject.toml
notebooks/: clustering_optimisation.ipynb  comparison_optimisation.ipynb
src/: mouse_heatmap.py  mouse_metrics.py  mouse_movement_draw.py  results.json  simulation_heatmap.py
