[tool.poetry]
name = "anomaly-mouse-dynamics"
version = "0.1.0"
description = ""
authors = ["tivole <asgarovkamran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
psutil = "^6.0.0"
scikit-learn = "^1.5.1"
ruff = "^0.6.3"
pywin32 = "^306"
gputil = "^1.4.0"
seqlog = "^0.3.31"
sqlalchemy = "^2.0.32"
pandas = "^2.2.3"
wmi = "^1.5.1"
pythonnet = "^3.0.5"
pynput = "^1.7.8"
matplotlib = "^3.10.1"
plotly = "^6.0.1"
hdbscan = "^0.8.40"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
